# pytest-threaded

./: .gitignore  LICENSE  README.md  conftest.py  net_gen.py  parallel_runner.py  pyproject.toml
.github/workflows/: ci.yml
src/pytest_threaded/: __init__.py  plugin.py  runner.py
tests/: conftest.py  test_demo.py  test_integration_subprocess.py
