[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-threaded"
version = "0.1.0"
description = "Run pytest tests concurrently using ThreadPoolExecutor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "pytest-threaded contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
keywords = ["pytest", "concurrent", "threaded", "testing"]
dependencies = [
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.entry-points.pytest11]
pytest_threaded = "pytest_threaded.plugin"

[project.urls]
Homepage = "https://github.com/your-username/pytest-threaded"
Repository = "https://github.com/your-username/pytest-threaded"
Issues = "https://github.com/your-username/pytest-threaded/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_threaded"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
